kubernetes/adhock-services/almulmu/05_service_web.yaml
apiVersion: v1
kind: Service
metadata:
  name: almudena-static-svc-web
  namespace: regalo-almu
spec:
  selector:
    app: almudena-static-web
  ports:
    - port: 80
      targetPort: 80
