kubernetes/adhock-services/almulmu/10_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-almulmu
  namespace: regalo-almu
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  ingressClassName: traefik
  rules:
    - host: almulmu.khazadlab.duckdns.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: almudena-static-svc
                port:
                  number: 80
  tls:
    - hosts:
        - almulmu.khazadlab.duckdns.org
      secretName: tls-ingress-almulmu
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-almulmu-web
  namespace: regalo-almu
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
spec:
  ingressClassName: traefik
  rules:
    - host: almulmu-web.khazadlab.duckdns.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: almudena-static-svc-web
                port:
                  number: 80
  tls:
    - hosts:
        - almulmu-web.khazadlab.duckdns.org
      secretName: tls-almulmu-web-ingress
